
                CHANGES IN party VERSION 0.9-13 (2007-07-12)

    o   update `mvt.f'


                CHANGES IN party VERSION 0.9-12 (2007-06-28)

    o   adjust to coin 0.6-4


                CHANGES IN party VERSION 0.9-11 (2007-06-11)

    o   populate `where' slot in `mob' objects.

    o   `mob_control' now has an `na.action' argument

    o   cforest with replace = FALSE, fraction = ...
        can now deal with weights (spotted by Carolin Strobl
        <carolin.strobl@stat.uni-muenchen.de>)

    o   interface to LAPACK (`dgesdd' for computing a SVD)
        directly. As a side-effect, the svdmem class can be 
        simplified and no memory allocation during 
        tree growing is necessary (which results in a measureable
        performance gain)


                CHANGES IN party VERSION 0.9-10 (2007-02-28)

    o   internal infrastructure for fit(x, y) interfaces,
        including a VariableFrame method for matrices.

    o   deal with factors with only one level and variables where
        all observations are NA

    o   don't compute design matrices in `ModelEnvFormula'


                CHANGES IN party VERSION 0.9-9 (2007-02-02)

    o   internal changes to data objects: joint transformations
        only necessary for response variables (new class `ResponseFrame')
        but we need to distinguish between testing (using ranks, for
        example) and prediction (means of raw data!).

        Problem spotted by Henric Nilsson <nilsson.henric@gmail.com>.


                CHANGES IN party VERSION 0.9-8 (2007-01-15)

    o   thicker median lines in boxplots


                CHANGES IN party VERSION 0.9-7 (2007-01-15)

    o   fix problems with multivariate response variables
        (spotted by Henric Nilsson <henric.nilsson@sorch.se>)


                CHANGES IN party VERSION 0.9-6 (2006-11-28)

    o   R-2.5.0 does not allow to change the storage.mode of factors


                CHANGES IN party VERSION 0.9-5 (2006-10-27)
