@@ -8,6 +8,16 @@
 
 #include "party.h"
 
+void C_remove_weights(SEXP subtree) {
+
+    SET_VECTOR_ELT(subtree, S3_WEIGHTS, R_NilValue);
+    
+    if (!S3get_nodeterminal(subtree)) {
+        C_remove_weights(S3get_leftnode(subtree));
+        C_remove_weights(S3get_rightnode(subtree));
+    }
+}
+
 
 /**
     An experimental implementation of random forest like algorithms \n
@@ -18,9 +28,10 @@
 */
 
 
-SEXP R_Ensemble(SEXP learnsample, SEXP weights, SEXP fitmem, SEXP controls) {
+SEXP R_Ensemble(SEXP learnsample, SEXP weights, SEXP bwhere, SEXP bweights, 
+                SEXP fitmem, SEXP controls) {
             
-     SEXP nweights, tree, where, ans;
+     SEXP nweights, tree, where, ans, bw;
      double *dnweights, *dweights, sw = 0.0, *prob, tmp;
      int nobs, i, b, B , nodenum = 1, *iweights, *iweightstmp, 
          *iwhere, replace, fraction, wgrzero = 0, realweights = 0;
@@ -70,7 +81,9 @@ SEXP R_Ensemble(SEXP learnsample, SEXP weights, SEXP fitmem, SEXP controls) {
   
      for (b  = 0; b < B; b++) {
          SET_VECTOR_ELT(ans, b, tree = allocVector(VECSXP, NODE_LENGTH + 1));
-         SET_VECTOR_ELT(tree, NODE_LENGTH, where = allocVector(INTSXP, nobs));
+         SET_VECTOR_ELT(bwhere, b, where = allocVector(INTSXP, nobs));
+         SET_VECTOR_ELT(bweights, b, bw = allocVector(REALSXP, nobs));
+         
          iwhere = INTEGER(where);
          for (i = 0; i < nobs; i++) iwhere[i] = 0;
      
@@ -90,10 +103,14 @@ SEXP R_Ensemble(SEXP learnsample, SEXP weights, SEXP fitmem, SEXP controls) {
 
          nweights = S3get_nodeweights(tree);
          dnweights = REAL(nweights);
-         for (i = 0; i < nobs; i++) dnweights[i] = (double) iweights[i];
+         for (i = 0; i < nobs; i++) {
+             REAL(bw)[i] = (double) iweights[i];
+             dnweights[i] = REAL(bw)[i];
+         }
      
          C_TreeGrow(tree, learnsample, fitmem, controls, iwhere, &nodenum, 1);
          nodenum = 1;
+         C_remove_weights(tree);
      }
 
      PutRNGstate();
