@@ -1,7 +1,18 @@
 
-                CHANGES IN party VERSION 0.9-13 (2007-07-12)
+                CHANGES IN party VERSION 0.9-13 (2007-07-23)
 
     o   update `mvt.f'
+
+    o   improve the memory footprint of RandomForest objects
+        substancially (by removing the weights slots from each node).
+        
+        More careful revision of the predict and fitting code is needed.
+
+    o   predictions for cforest with multivariate response are
+        now returned in a matrix (should be a data.frame)
+
+    o   remove confusing `no admissible split found' warning 
+        (which simply meant that the `minsplit' wasn't met).
 
 
                 CHANGES IN party VERSION 0.9-12 (2007-06-28)
